--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">CST2335_AndroidLabs</string>
+
+    // LAB 1 - Start Activity
+    <string name="activityNameStartActivity">Start Activity</string>
     <string name="welcomeMessage">Hello World!</string>
     <string name="buttonText">I\'m a button</string>
 </resources>
